hw3/k8s_manifests/hw3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw3-deployment
  labels:
    app: hw3-app
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hw3-app
  template:
    metadata:
      labels:
        app: hw3-app
    spec:
      containers:
        - name: hw3-app-pod
          image: prizzzrak777/hw3_docker_arm:latest
          ports:
            - name: web
              containerPort: 8000
#              hostPort: 8000
