hw3/k8s_manifests/hw3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw3-service
spec:
  selector:
   app: hw3-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
#      nodePort: 30000
#  type: NodePort
